--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@prisma/client": "^6.9.0",
     "@faker-js/faker": "^8.4.1",
+    "@prisma/client": "^6.9.0",
+    "bcryptjs": "^2.4.3",
     "next": "15.3.3",
     "next-auth": "^4.24.11",
     "prisma": "^6.9.0",
@@ -22,9 +23,11 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "ts-node": "^10.9.2",
-    "typescript": "^5"
+    "typescript": "^5",
+		"@types/bcryptjs": "^2.4.2"
+
   },
   "prisma": {
-    "seed": "ts-node prisma/seed.ts"
+     "seed": "ts-node -P tsconfig.seed.json prisma/seed.ts"
   }
 }
